2006-07-05  Ethan A Merritt <merritt@u.washington.edu>

	* term/pdf.trm: Add {size xx,yy} option, exactly parallel to the
	option recently added for PostScript. Size can be given in inches
	or cm.

2006-07-05  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/makefile.nt:  Add /DWIN32 to CFLAGS

2006-07-04  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/image.dem: Remove obsolete warning about terminal support.

2006-07-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_enhanced_open):  (2nd try)
	Reset to _default_ font, not _current_ font!
	Bug #1510055

2006-07-04  Ethan A Merritt <merritt@u.washington.edu>

	* term/gd.trm (PNG_justify_text): Move the conditional test for
	HAVE_GD_TTF inside the PNG_justify_text() routine, rather than
	maintaining it in parallel in the PNG/JPEG/GIF TERM_TABLE entries.
	Actually, we were failing to maintain it in parallel, causing
	Bug #1515292.

2006-07-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (builtin_toggle_ruler, turn_ruler_off): New autogenerated
	variables MOUSE_RULER_X and MOUSE_RULER_Y.

	* src/mouse.c (GetRulerString, builtin_toggle_polardistance): Let polar
	coordinates show either (distance,angle) or (distance,tangent) after
	multiple clicks of the default hotkey '5'.

	* src/mouse.c (GetRulerString): Support polar coordinates in the
	mouse&ruler message string also for log-log plots.

2006-07-02  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/show.c (show_command): Place in some messages about "show data"
	and "show linestyle" being deprecated.

2006-06-30  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/image.dem demo/demo.edf:  Set binary flag in cvs repository.
	cvs admin -kb demo/image.dem demo/demo.edf

2006-06-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/breaders.c (edf_filetype_function): Don't print a debugging
	message.

	* src/eval.c (update_gpval_variables): Added automatic read-only
	variables GPVAL_VERSION and GPVAL_PATCHLEVEL.
